# cli

./: .dockerignore  .gitignore  .gitlab-ci.yml  .packit.yaml  .pre-commit-config.yaml  .pyre_configuration  LICENSE  Makefile  README.adoc  README.md  catalog-info.yaml  cli.spec  pyproject.toml  testing-farm.spec  tox.ini
container/: Dockerfile  Dockerfile.fedora  build.env  goss.yaml  testing-farm
plans/: integration.fmf  sanity.fmf
src/tft/cli/: __init__.py  commands.py  config.py  tool.py  utils.py
src/tft/cli/command/: composes.py  listing.py
tests/commands/: main.fmf
tests/commands/cancel/: main.fmf  test.sh
tests/commands/composes/: main.fmf  test.sh
tests/commands/list/: main.fmf  test.sh
tests/commands/request/: main.fmf  test.sh
tests/commands/request/data/: env5.yaml  env6.env
tests/commands/reserve/: main.fmf  test.sh
tests/commands/restart/: main.fmf  test.sh
tests/commands/run/: main.fmf  test.sh
tests/commands/version/: main.fmf  test.sh
tests/commands/watch/: main.fmf  test.sh
tests/fixtures/: mock_server.py
tests/fixtures/2db3190a-f608-4f69-adf8-2129c1d0d03b/: get.json
tests/fixtures/51335c9e-355e-46ff-a915-76194898c29d/: get.json  results.xml
