[tool.poetry]
name = "tft-cli"
version = "0.0.1"
description = "Testing Farm CLI tool"
authors = ["Miroslav Vadkerti <mvadkert@redhat.com>"]
license = "Apache-2.0"

packages = [
  { include = "tft", from = "src" }
]

[tool.poetry.scripts]
testing-farm = "tft.cli:app"

[tool.poetry.dependencies]
python = "~3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pyre-check = "^0.9.10"
pytest = "^7.0.0"
isort = "^5.10.1"
black = "^22.1.0"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
